# Meta-Vision-SolaisNG

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_.txt  CMakePresets.json  README.md  compile_linux.sh  compile_mingw.sh
include/: ArmorDetector.h  ImageSet.h  NanoDet_TensorRT.h  ParamSetManager.h  TrtCudaUtils.h  TrtLogger.h  VideoSet.h  YOLOv5_TensorRT.h
lib/: CMakeLists.txt
lib/TensorRTX/: CMakeLists.txt
lib/TensorRTX/include/: model.cpp  tensorrtx_config.h
lib/TensorRTX/plugin/: yololayer.cu  yololayer.h
lib/TensorRTX/src/: model.cpp
lib/TensorRTX_YOLOv5/: CMakeLists.txt
lib/TensorRTX_YOLOv5/include/: logging.h  types.h
lib/TensorRTX_YOLOv5/src/: calibrator.cpp  model.cpp  postprocess.cpp  preprocess.cu
lib/mvsdk/: CMakeLists.txt
lib/mvsdk/include/: CameraDefine.h
lib/mvsdk/lib/mingw-w64-x86_64/: MVCAMSDK_X64.lib
nn-models/: coco.names
solais_auto_aim/: CMakeLists.txt  package.xml
solais_auto_aim/include/solais_auto_aim/: armor.hpp  solais_aiming_solver.hpp  solais_armor_detector.hpp  solais_armor_detector_node.hpp  solais_armor_lenet.hpp  solais_pos_solver.hpp
solais_auto_aim/src/detector/: solais_armor_detector.cpp  solais_armor_detector_node.cpp  solais_armor_lenet.cpp  solais_pos_solver.cpp
solais_bringup/: CMakeLists.txt  package.xml
solais_bringup/configs/: launch_params.yaml  node_params.yaml
solais_bringup/launch/: debug_bringup.launch.py
solais_camera/: CMakeLists.txt  camera_info.yaml  meta_infrantry_camprofile.config  package.xml
solais_camera/configs/: camera_info.yaml  meta_infrantry_camprofile.config
solais_camera/include/solais_camera/: solais_camera_client.hpp  solais_camera_server.hpp  solais_ip_camera.hpp  solais_ip_camera_node.hpp  solais_meta_camera.hpp  solais_mindvision_camera.hpp  solais_mindvision_camera_node.hpp  solais_usb_camera.hpp  solais_usb_camera_node.hpp
solais_camera/src/: solais_camera_client.cpp  solais_camera_server.cpp
solais_camera/src/ip_camera/: solais_ip_camera.cpp  solais_ip_camera_node.cpp
solais_camera/src/mindvision_camera/: solais_mindvision_camera.cpp  solais_mindvision_camera_node.cpp
solais_camera/src/usb_camera/: solais_usb_camera.cpp  solais_usb_camera_node.cpp
solais_description/: CMakeLists.txt  package.xml
solais_description/urdf/: infantry_gimbal.urdf.xacro
solais_interfaces/: CMakeLists.txt  package.xml
solais_interfaces/msg/: Armor.msg
solais_interpreter/: CMakeLists.txt  package.xml
solais_interpreter/config/: camera_info.yaml  camera_node_params.yaml  launch_params.yaml  node_params.yaml
solais_interpreter/include/solais_interpreter/: crc.h  solais_interpreter.hpp
solais_interpreter/launch/: common.py  no_hardware.launch.py  vision_bringup.launch.py
solais_interpreter/src/: crc.cpp  solais_interpreter.cpp
solais_serial/: CMakeLists.txt  README.md  package.xml
solais_serial/include/solais_serial/: projectile_prediction.hpp  solais_serial_legacy.hpp
solais_serial/src/: crc.cpp  solais_serial_legacy.cpp
src/: ArmorDetector.cpp  BufferManager.h  CMakeLists.txt  Executor.cpp  ImageSet.cpp  MVCamera.cpp  NanoDet_TensorRT.cpp  NanoDet_TensorRT.cu  OpenCVCamera.cpp  ParamSetManager.cpp  Serial.cpp  TerminalSocket.cpp  VideoSet.cpp  YOLOv5_TensorRT.cpp
tools/Solais/: CMakeLists.txt  main.cpp
tools/SolaisTerminal/: CMakeLists.txt
tools/Utilities/: CMakeLists.txt
unit-tests/: CMakeLists.txt  CudaTest.cu  TensorRTUnitTest.cpp  TensorRTX_YOLOv5UnitTest.cpp  TensorRT_NanoDet_UnitTest.cpp
vision_interface/: CMakeLists.txt  package.xml
vision_interface/msg/: AutoAim.msg
